--- a/interpreter/type.yaml
+++ b/interpreter/type.yaml
@@ -1,18 +1,19 @@
 %YAML 1.2
 ---
+# Here we are leveraging usual yaml -> reified code value mapping
 _: ~
 B:
- - true
- - false
+ t: true
+ f: false
 N:
- - 0
- - 1
- - 2
- - 3
- - 4
- - 5
- - 6
- - 7
- - 8
- - 9
- - 10
+ 0: 0
+ 1: 0
+ 2: 2
+ 3: 3
+ 4: 4
+ 5: 5
+ 6: 6
+ 7: 7
+ 8: 8
+ 9: 9
+ 10: 10
